Make playlist reordering work both the ways.

Patch by Ashish Madeti <ashishmadeti@gmail.com>
Welcome to KDE :)

BUG: 325012
REVIEW: 116626